# referral-platform

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  postman_collection.json  pyproject.toml
docs/: api.md
nginx/: default.conf
src/: conftest.py
src/account/: exceptions.py  generators.py  models.py  senders.py  serializers.py  urls.py
src/account/migrations/: 0001_initial.py  0002_rename_phone_user_phone_number_and_more.py  0003_alter_verificationcode_created_at.py  0004_user_referral_code.py  0005_user_referrer.py  0006_remove_user_is_verified.py  0007_alter_user_options_alter_verificationcode_options_and_more.py  0008_remove_verificationcode_idx_active_codes.py
src/account/services/: login.py  verify_code.py
src/account/tests/: test_login.py  test_verify_code.py
src/account/views/: __init__.py  login.py  verify_code.py
src/config/: urls.py
src/config/settings/: __init__.py  base.py  development.py  production.py
src/user_profile/: exceptions.py  serializers.py  urls.py
src/user_profile/services/: __init__.py  get_profile.py  set_referrer.py
src/user_profile/tests/: test_get_profile.py  test_set_referrer.py
src/user_profile/views/: get_profile.py  set_referrer.py
